06-20-2017-the-perl-conference/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dancer
  labels:
	run: dancer
spec:
  type: ClusterIP
  ports:
  - port: 3000
	protocol: TCP 
	name: plack
  externalIPs:
  - 123.123.123.123
  selector:
	run: dancer
---
