06-20-2017-the-perl-conference/kubernetes/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: manager-ingress
  namespace: default
  labels:
    app: dancer
    run: plack
spec:
  rules:
    - host: foo.host.mydomain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: plack
              servicePort: 3000
status:
  loadBalancer: {}
